syntax= "proto3";

package proto;

option go_package = "./proto";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service Greeter {
    rpc SayHello(HelloRequest) returns (stream HelloResponse) {}
}